# validations-common

./: .ansible-lint  .coveragerc  .dockerignore  .gitignore  .gitreview  .pre-commit-config.yaml  .reqcheck_override.yaml  .stestr.conf  .yamllint  .zuul.yaml  CONTRIBUTING.rst  Dockerfile  README.rst  ansible-test-env.rc  bindep.txt  lower-constraints.txt  molecule-requirements.txt  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
.config/molecule/: config.yml
.devcontainer/: devcontainer.json
doc/: requirements.txt
doc/source/: conf.py  contributing.rst  index.rst  installation.rst  modules.rst  roles.rst  usage.rst
doc/source/_exts/: ansible-autodoc.py
doc/source/modules/: modules-advanced_format.rst  modules-callbacks-http_json.rst  modules-check_package_update.rst  modules-haproxy_conf.rst  modules-hiera.rst  modules-reportentry.rst  modules-validations_read_ini.rst  modules-warn.rst
doc/source/reference/: index.rst
doc/source/roles/: check-disk-space-pre-upgrade.rst  check-rsyslog.rst  role-advanced_format_512e_support.rst  role-check_cpu.rst  role-check_disk_space.rst  role-check_latest_packages_version.rst  role-check_ram.rst  role-check_selinux_mode.rst  role-dns.rst  role-haproxy.rst  role-no_op.rst  role-ntp.rst  role-service_status.rst  role-validate_selinux.rst  role-xfs_check_ftype.rst  verify-package.rst
playbooks/: coverchange.yaml  post.yaml  reqcheck.yaml  validations-common-functional.yaml
playbooks/molecule/: pre.yml  run-local.yml  run.yml
releasenotes/source/: 1.6.rst  conf.py  index.rst
roles/fetch_validations/defaults/: main.yaml
roles/fetch_validations/tasks/: main.yaml
roles/validations/defaults/: main.yaml
roles/validations/files/: catalog_vars_override.yaml
roles/validations/tasks/: execute_full_catalogue.yaml  file.yaml  list.yaml  list_validation_history.yaml  main.yaml  run.yaml  run_extra_vars_file.yaml  show.yaml  show_results.yaml  show_validation_info.yaml  validations.yaml
roles/validations/templates/: file-template.j2
roles/validations/vars/: main.yaml
scripts/: run-local-test
tests/: test_molecule.py
tools/: http_server.py  validate-files.py
validations_common/: __init__.py  validation.py
validations_common/callback_plugins/: __init__.py  fail_if_no_hosts.py  http_json.py  validation_json.py  validation_output.py  validation_stdout.py
validations_common/playbooks/: 512e.yaml  check-cpu.yaml  check-disk-space-pre-upgrade.yaml  check-disk-space.yaml  check-ftype.yaml  check-latest-packages-version.yaml  check-ram.yaml  check-rsyslog.yaml  check-selinux-mode.yaml  dns.yaml  haproxy.yaml  no-op.yaml  ntp.yaml  service-status.yaml  validate-selinux.yaml  verify-package.yaml
validations_common/roles/advanced_format_512e_support/molecule/default/: molecule.yml
validations_common/roles/check_cpu/defaults/: main.yml
validations_common/roles/check_cpu/molecule/default/: converge.yml
validations_common/roles/check_cpu/tasks/: main.yml
validations_common/roles/check_disk_space/defaults/: main.yml
validations_common/roles/check_disk_space/molecule/default/: converge.yml  molecule.yml
validations_common/roles/check_latest_packages_version/defaults/: main.yml
validations_common/roles/check_latest_packages_version/molecule/default/: converge.yml  molecule.yml  prepare.yml  valfrwk-release-1.0.0-1.20210331045404.4c29590.el8.x86_64.rpm  (+2 more)
validations_common/roles/check_latest_packages_version/tasks/: main.yml
validations_common/roles/check_ram/defaults/: main.yml
validations_common/roles/check_ram/tasks/: main.yml
validations_common/roles/check_rsyslog/tasks/: main.yaml  systemctl.yaml  yum.yaml
validations_common/roles/check_selinux_mode/tasks/: main.yml
validations_common/roles/check_service_status/defaults/: main.yml
validations_common/roles/check_service_status/tasks/: main.yml
validations_common/roles/dns/defaults/: main.yml
validations_common/roles/ntp/tasks/: main.yml
validations_common/roles/service_status/defaults/: main.yaml
validations_common/roles/service_status/tasks/: containers.yaml
validations_common/roles/validate_selinux/defaults/: main.yml
validations_common/roles/validate_selinux/tasks/: main.yml
validations_common/roles/verify_package/: README.md
validations_common/roles/verify_package/defaults/: main.yml
validations_common/roles/verify_package/tasks/: main.yml
validations_common/tests/: fakes.py  test_validation.py
validations_common/tests/callback_plugins/: test_fail_if_no_hosts.py  test_http_json.py  test_validation_json.py  test_validation_output.py  test_validation_stdout.py
zuul.d/: base.yaml  layout.yaml  molecule.yaml
zuul.d/playbooks/: run.yml
(+14 files in other folders)
