[metadata]
name = validations-common
summary = A common Ansible libraries and plugins for the validations framework
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://opendev.org/openstack/validations-common
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    validations_common

scripts =
    validations_common/validation.py

data_files =
    share/validations-common/roles = validations_common/roles/*
    share/validations-common/callback_plugins = validations_common/callback_plugins/*
    share/validations-common/lookup_plugins = validations_common/lookup_plugins/*
    share/validations-common/library = validations_common/library/*
    share/validations-common/playbooks = validations_common/playbooks/*

[compile_catalog]
directory = validations-common/locale
domain = validations-common

[update_catalog]
domain = validations-common
output_dir = validations-common/locale
input_file = validations-common/locale/validations-common.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = validations-common/locale/validations-common.pot
