[metadata]
name = validations-common
summary = A common Ansible libraries and plugins for the validations framework
description_file =
    README.rst
long_description_content_type = text/x-rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://opendev.org/openstack/validations-common
python_requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    validations_common

data_files =
    share/ansible/roles = roles/*
    share/ansible/roles = validations_common/roles/*
    share/ansible/library = validations_common/library/*
    share/ansible/validation-playbooks = validations_common/playbooks/*
